# c2d2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/include/: Args.hpp  CodeCloneInfo.hpp  Detector.hpp  Normalize.hpp  Parser.hpp  SimilarityDetect.hpp  Snippets.hpp  ollama.hpp
src/src/: CodeCloneInfo.cpp  Detector.cpp  Normalize.cpp  Parser.cpp  SimilarityDetect.cpp  Snippets.cpp  detector.hpp  normalize.hpp  parser.hpp
src/tests/: main.cpp  test_detect_funcs.cpp  test_embedding.cpp  test_get_funcs_from_c_file.cpp  test_get_method_from_file.cpp  test_hash_detect.cpp  test_model_info.cpp  test_nested_set.cpp  test_set.cpp  test_simdetect  test_simdetect.cpp  test_snippet.cpp  test_snippet_normalize.cpp  test_unordered.cpp
src/tests/testfiles/: clones.txt  snippet_parse.txt  type1_1.txt  type1_2.txt
src/tests/testfiles/sample_repo/: testfile.c  testfile.java
src/tests/testfiles/test_repo/: AnnotationUtils.java
src/tests/testfiles/test_repo_edited/: AnnotationUtils.java
